<resources>
    <string name="app_name">HonsulProject</string>
    <string name="serverBTN">서버</string>
    <string name="clientBTN">클라이언트</string>
    <string name="todo">TODO</string>
    <string name="ip_edit_server">IP</string>
    <string name="port_edit_server">Port</string>
    <string name="ipTXT_server">IP</string>
    <string name="portTXT_server">Port</string>
    <string name="serveraddBTN">서버 추가</string>
    <string name="fullBTN">한잔</string>
    <string name="halfBTN">반잔</string>
    <string name="parti">참여자</string>
    <string name="ipTXT_client">IP</string>
    <string name="portTXT_client">Port</string>
    <string name="clientaddBTN">추가</string>
    <string name="clientaddBTN2">추가</string>
    <string name="ip_edit_client">IP</string>
    <string name="port_edit_client">Port</string>
    <string name="nameTXT_client">이름</string>
    <string name="name_edit_client">이름</string>
    <string name="idTXT">ID</string>
    <string name="pwdTXT">PW</string>
    <string name="joinBTN">회원가입</string>
    <string name="loginBTN">로그인</string>
    <string name="joinokBTN">가입</string>
    <string name="joincancelBTN">취소</string>
    <string name="joinnameEDIT">이름</string>
    <string name="joinidEDIT">아이디</string>
    <string name="joinpwdEDIT">비밀번호</string>
    <string name="joinpwdokEDIT">PW 확인</string>
    <string name="hint">입력해주세요</string>
    <string name="name">NAME</string>
    <string name="check">PW 확인</string>
    <string name="roomname">방이름</string>
    <string name="addroom">방 생성</string>
    <string name="mainid">아이디</string>
    <string name="mainpwd">비밀번호</string>
    <string name="delroomBTN">방 삭제</string>
    <string name="exitroomBTN">방 나오기</string>
    <string name="bluetoothBTN">블루투스</string>
    <string name="enterroom">대기실 입장</string>
    <string name="roomnameTXT" />
    <string name="Roomlist_host">방장: </string>
    <string name="nothing">nothing</string>
    <string name="logo">LOGO</string>
    <string name="pairing">블루투스 디바이스</string>
</resources>