<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44B244"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:background="#44B244"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#44B244"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/idEDIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="#000000"
            android:backgroundTint="#F6F5F5"
            android:ems="10"
            android:hint="@string/mainid"
            android:inputType="textMultiLine|textNoSuggestions"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#44B244"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pwdEDIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="#000000"
            android:backgroundTint="#F6F5F5"
            android:ems="10"
            android:hint="@string/mainpwd"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <Button
                android:id="@+id/joinBTN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="#F6F5F5"
                android:onClick="onClick"
                android:text="@string/joinBTN" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBTN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="#F6F5F5"
                android:onClick="onClick"
                android:text="@string/loginBTN" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>