<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".JoinActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_weight="6"
        android:background="#44B244"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingStart="300dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="3"
                android:background="#FFFFFF"
                android:gravity="center|start"
                android:text="@string/name"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/joinnameEDIT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                android:background="@drawable/round_etxt_shape"
                android:backgroundTint="#F6F5F5"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="3"
                android:background="#FFFFFF"
                android:gravity="center|start"
                android:text="@string/idTXT"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/joinidEDIT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                android:background="@drawable/round_etxt_shape"
                android:backgroundTint="#F6F5F5"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/idTXT"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="3"
                android:background="#FFFFFF"
                android:gravity="center|start"
                android:text="@string/pwdTXT"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/joinpwdEDIT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                android:background="@drawable/round_etxt_shape"
                android:backgroundTint="#F6F5F5"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/joinpwdEDIT"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="3"
                android:background="#FFFFFF"
                android:gravity="center|start"
                android:text="@string/check"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/joinpwdokEDIT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                android:background="@drawable/round_etxt_shape"
                android:backgroundTint="#F6F5F5"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/joinpwdokEDIT"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/joinokBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_shape"
            android:onClick="onClick"
            android:text="@string/joinokBTN"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/joincancelBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_shape"
            android:onClick="onClick"
            android:text="@string/joincancelBTN"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>