<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".AddRoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:background="#44B244"
            android:orientation="horizontal"
            android:paddingStart="300dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#44B244"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/roomname"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/roomnameEDIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.3"
            android:background="#FFFFFF"
            android:backgroundTint="#F6F5F5"
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/joinpwdEDIT"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/roompwdEDIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.3"
            android:background="#FFFFFF"
            android:backgroundTint="#F6F5F5"
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/addroomBTN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.25"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/check" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/addroom"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/cancelroomBTN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.25"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/cancel" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/joincancelBTN"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>